--- a/lab-2/index.html
+++ b/lab-2/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <!--
-    If in pairs add names here
+    Basanta Pakhrin 200582149
+    Ankit Thada Magar 200583493
     -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
